GCA-189 Eliminate WorkloadController and create listener
